--- a/src/components/Team/Card.css
+++ b/src/components/Team/Card.css
@@ -15,6 +15,7 @@
     border-left: 1px solid rgba(255,255,255,0.5);
     backdrop-filter: blur(5px);
     font-size: 1.2em;
+    padding-bottom: 15px;
 }
 
 .TeamInfo:hover
@@ -31,6 +32,7 @@
     font-weight: bold;
     padding-bottom: 15px;
     font-family: monospace;
+
 }
 
 .TeamInfo  p {
@@ -39,6 +41,7 @@
     font-weight: inherit;
     letter-spacing: 1px;
     font-family: "Calibri Light";
+
 
 }
 
