--- a/src/components/Tokenomics/Tokenomics.css
+++ b/src/components/Tokenomics/Tokenomics.css
@@ -3,8 +3,6 @@
     display: grid;
     grid-template-columns: auto auto;
     grid-gap: 10px;
-    padding: 10px;
-    padding-bottom: 50px;
     box-sizing: border-box;
 }
 
@@ -26,18 +24,19 @@
 
 .PieChart{
     background: transparent;
-    width: 25%;
+    width: 30%;
     padding-top: 50px;
     box-sizing: border-box;
+    position: relative;
+    margin-right: 35px;
 }
 
 .TokenInfo {
     box-sizing: border-box;
-    font-size: 1em;
     height: 800px;
     padding-right: 35px;
     padding-left: 35px;
-    padding-bottom: 50px;
+    padding-bottom: 20px;
     margin-top: 100px;
     margin-left: 50px;
     color: black;
@@ -45,7 +44,6 @@
     box-shadow: 20px 20px 50px rgba(0,0,0,0.5);
     border-radius: 15px;
     background: rgba(255,255,255,0.1);
-    overflow: hidden;
     border-top: 1px solid rgba(255,255,255,0.5);
     border-left: 1px solid rgba(255,255,255,0.5);
     backdrop-filter: blur(5px);
@@ -59,24 +57,29 @@
 }
 
 .TokenInfo h1 {
+
     padding-top: 20px;
     font-size: 2.5em;
     z-index: -1;
     font-weight: bold;
     color: #476098;
     font-family: monospace;
+    margin-bottom: -20px;
 }
 
 .TokenInfo h2 {
     padding-top: 20px;
     font-size: 1.8em;
     z-index: -1;
+
 }
 
 .TokenInfo p {
     padding-top: 10px;
     padding-bottom: 20px;
     font-size: 1.1em;
+    margin-bottom: 10px;
+    padding-bottom: 10px;
 }
 
 .TokenInfo p:hover {
@@ -85,15 +88,13 @@
 }
 
 .TokenInfo a {
-
     position: relative;
-    display: inline-block;
     padding: 8px 20px;
     background: #61dafb;
     color: black;
     border-radius: 20px;
     text-decoration: none;
-    margin-bottom: -10px;
+    padding-bottom: 10px;
 }
 
 .TokenomicsHeader {
@@ -101,7 +102,7 @@
     color: #61dafb;
     width: 100%;
     alignment: center;
-    margin-top: -230px;
+    margin-top: -275px;
     box-sizing: border-box;
 }
 
