--- a/src/components/Community/CommunityMobile.css
+++ b/src/components/Community/CommunityMobile.css
@@ -1,27 +1,20 @@
-.CommunityContainer{
+.CommunityContainerM{
 
-    position: relative;
-    display: inline-grid;
-    grid-template-columns: auto auto auto auto;
+    display: inline-block;
+
+    align-items: center;
+    grid-template-columns: auto auto;
     background-color: transparent;
-    padding: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: stretch;
-    box-sizing: border-box;
-    padding-bottom: 250px;
-    padding-top: 250px;
-    grid-gap: 20px;
-
+    margin-right: -10px;
 }
 
-.CommunityItem{
-    position: relative;
-    margin-top: -400px;
+.CommunityItemM{
+
+    margin-bottom: 35px;
     background-color: rgba(255, 255, 255, 0.8);
-    width: 40%;
-    padding-right: 20px;
-    margin-right: 10px;
+    height: 400px;
+    width: 400px;
+
     background: rgba(255,255,255,0.1);
     color: black;
     border-top: 1px solid rgba(255,255,255,0.5);
@@ -30,11 +23,13 @@
     box-shadow: 20px 20px 50px rgba(0,0,0,0.5);
     font-size: 1.2em;
     text-align: center;
-    box-sizing: border-box;
-    overflow: hidden;
+    padding-top: 20px;
+    padding-right: -30px;
+    margin-left: 10px;
+    overflow: scroll;
 }
 
-.CommunityItem:hover{
+.CommunityItemM:hover{
 
     background: linear-gradient(whitesmoke,#e6f3ff, whitesmoke);
     color: black;
@@ -42,18 +37,28 @@
     overflow: hidden;
 }
 
-.CommunityHeader{
+.CommunityHeaderM{
     padding-bottom: 20px;
     font-size: 2.5em;
     color: #61dafb;
     width: 100%;
     alignment: center;
     margin-top: 100px;
-    margin-bottom: 200px;
+    margin-bottom: 120px;
 }
 
+#logo{
 
-.CommunityItem h2{
+    width: 6%;
+    margin-left: 15px;
+}
+
+#plus{
+    width: 3%;
+    margin-left: 10px;
+}
+
+.CommunityItemM h2{
     margin-top: 25px;
     font-family: monospace;
     font-size: 2em;
@@ -63,8 +68,7 @@
 .CommunityItem p{
     margin-top: 25px;
     align-content: center;
-    color: #476098;
-    padding: 5px 5px 5px 5px;
+    letter-spacing: 1.5px;
 }
 
 .CommunityItem img{
