--- a/src/components/Team/Card.css
+++ b/src/components/Team/Card.css
@@ -1,12 +1,9 @@
 .TeamInfo {
 
+
+    padding: 10px 20px 60px 30px;
     color: black;
-    position:relative;
-    width: 75%;
-    height:400px;
-    padding-left: 35px;
-    padding-right: 35px;
-    margin: 50px 50px 500px 50px;
+    position: relative;
     box-shadow: 20px 20px 50px rgba(0,0,0,0.5);
     border-radius: 15px;
     background: rgba(255,255,255,0.1);
@@ -14,9 +11,13 @@
     border-top: 1px solid rgba(255,255,255,0.5);
     border-left: 1px solid rgba(255,255,255,0.5);
     backdrop-filter: blur(5px);
-    font-size: 1.2em;
-    padding-bottom: 15px;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-top: 35px;
+    top: -200px;
 }
+
+
 
 .TeamInfo:hover
 {
@@ -37,12 +38,19 @@
 
 .TeamInfo  p {
 
-    font-size: large;
+    font-size: medium;
     font-weight: inherit;
-    letter-spacing: 1px;
-    font-family: "Calibri Light";
+    letter-spacing: 1.2px;
+    font-family: "-apple-system";
 
 
+}
+
+
+#logotype {
+
+    width: 12%;
+    padding-bottom: 10px;
 }
 
 
@@ -50,6 +58,7 @@
 
     display: flex;
     justify-content: center;
+    grid-template-columns: auto auto auto auto;
     align-items: center;
     background: ghostwhite;
     box-sizing: border-box;
@@ -146,7 +155,7 @@
     alignment: center;
     margin-top: 75px;
     padding-top: 0px;
-
+    margin-bottom: 100px;
 
 }
 
