--- a/src/components/Community/Medium.css
+++ b/src/components/Community/Medium.css
@@ -4,6 +4,9 @@
     display: block;
     justify-content: center;
     grid-template-columns: auto auto auto;
+    overflow: scroll;
+    height: 400px;
+    width: 720px;
 }
 
 .blogHeader {
@@ -22,12 +25,11 @@
     box-shadow: 20px 20px 50px rgba(0,0,0,0.5);
     border-radius: 15px;
     background: rgba(255,255,255,0.1);
-    overflow: auto;
     border-top: 1px solid rgba(255,255,255,0.5);
     border-left: 1px solid rgba(255,255,255,0.5);
     backdrop-filter: blur(5px);
     margin-left: 10px;
-
+    margin-right: 10px;
 }
 
 .Card:hover{
@@ -49,6 +51,7 @@
     font-weight: bolder;
     color: #476098;
     text-decoration: none;
+
 }
 
 .Card a:hover {
