--- a/src/components/Tokenomics/Tokenomics.css
+++ b/src/components/Tokenomics/Tokenomics.css
@@ -6,17 +6,7 @@
     box-sizing: border-box;
 }
 
-#background-video{
 
-    height: 100%;
-    width: 100%;
-    float: left;
-    top: 0;
-    padding: 0;
-    position: fixed; /* optional depending on what you want to do in your app */
-
-
-}
 
 .TokenomicsItem {
     box-sizing: border-box;
@@ -24,30 +14,29 @@
 
 .PieChart{
     background: transparent;
-    width: 30%;
-    padding-top: 50px;
+    padding-top: 35px;
     box-sizing: border-box;
     position: relative;
-    margin-right: 35px;
+    margin-right: 400px;
 }
 
 .TokenInfo {
-    box-sizing: border-box;
-    height: 800px;
-    padding-right: 35px;
-    padding-left: 35px;
-    padding-bottom: 20px;
-    margin-top: 100px;
-    margin-left: 50px;
+
+    padding: 10px 20px 60px 30px;
     color: black;
-    position: absolute;
+    position: relative;
     box-shadow: 20px 20px 50px rgba(0,0,0,0.5);
     border-radius: 15px;
     background: rgba(255,255,255,0.1);
+    overflow: hidden;
     border-top: 1px solid rgba(255,255,255,0.5);
     border-left: 1px solid rgba(255,255,255,0.5);
     backdrop-filter: blur(5px);
-    width: 35%;
+    margin-left: 10px;
+    margin-right: 30%;
+
+    margin-top: 35px;
+
 }
 
 .TokenInfo:hover{
@@ -80,6 +69,10 @@
     font-size: 1.1em;
     margin-bottom: 10px;
     padding-bottom: 10px;
+    padding-right: 10px;
+    padding-left: 10px;
+    letter-spacing: 1px;
+
 }
 
 .TokenInfo p:hover {
